# Configuru

./: .gitignore  README.md  configuru.cpp  configuru.hpp  doxygen.config
benchmark/: CMakeLists.txt  build.sh  configuru_benchmark.cpp
docs/html/: annotated.html  classconfiguru_1_1Config-members.html  classconfiguru_1_1Config.html  classconfiguru_1_1Config_1_1ConfigObject_1_1const__iterator-members.html  classconfiguru_1_1Config_1_1ConfigObject_1_1const__iterator.html  classconfiguru_1_1Config_1_1ConfigObject_1_1iterator-members.html  classconfiguru_1_1Config_1_1ConfigObject_1_1iterator.html  classconfiguru_1_1Config__coll__graph.map  classconfiguru_1_1Config__coll__graph.md5  classconfiguru_1_1ParseError-members.html  classconfiguru_1_1ParseError.html  classconfiguru_1_1ParseError__inherit__graph.map  classconfiguru_1_1ParseError__inherit__graph.md5  classes.html  configuru_8hpp_source.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_10.map  inherit_graph_10.md5  inherit_graph_11.map  inherit_graph_11.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherit_graph_4.map  inherit_graph_4.md5  inherit_graph_5.map  inherit_graph_5.md5  (+29 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  namespaces_0.js  pages_0.js  (+14 more)
formater/: CMakeLists.txt  build.sh  formater.cpp
json_test_suite/fail/: bad_true.json
json_test_suite/pass/: array_of_empty_object.json  double_precision_floating_point.json  escaping_and_unicode.json  extended_depth_test_list.json  extended_depth_test_object.json  horrid_escaping.json  long_number_support.json  support_boolean.json  support_lowercase_unicode_text.json  support_null.json  support_simple_object_string_value.json
test/: CMakeLists.txt  build_and_run.sh  configuru_test.cpp  simple_test.hpp
test_suite/: comments_in.cfg  comments_out.cfg  comments_out_2.cfg
test_suite/cfg_fail/: binary_float.cfg  equal_in_object.cfg  reserved_key.cfg
test_suite/cfg_pass/: binary.cfg  block_comment.cfg  hex.cfg  identifier_keys.cfg  implicit_list.cfg  implicit_map.cfg  inf.cfg  nan.cfg  nesting_block_comment.cfg  no_array_comma.cfg  no_object_comma.cfg  omit_color_before_map.cfg  single_line_comment.cfg  trailing_list_comma.cfg  trailing_map_comma.cfg  unicode_32bit.cfg
test_suite/json_fail/: bad_escape.json  bad_false.json  duplicate_keys.json  leading_zeroes.json  no_quotes.json  trucated_key.json  trucated_key_single_quote.json  trucated_value.json  trucated_value_single_quote.json
test_suite/json_only_fail/: multiple_line_comment.json  no_tab_in_string.json  single_line_comment.json  trailing_comma.json
test_suite/json_only_pass/: bad_indentation.json  double_indentation.json  no_indentation.json  space_tester.json  support_non_trimed_data.json  weird_spaces.json
test_suite/json_pass/: bigint_number_support.json  escaped_solidus.json  escaping_and_unicode.json  extended_depth_test_object.json  extended_unicode_plane.json  large_number.json  string.json  support_lowcase_float_value.json  support_non_protected_text.json  support_non_trimed_data.json  support_simple_digit_array.json  support_simple_object_float_value.json  support_simple_object_int_value.json  support_simple_quote_in_string.json  support_simple_string_array.json  support_uppercase_unicode_text.json  unicode_16bit.json  zero.json
test_suite/special/: config.json  two_spaces_indentation.json
